--- a/myRealPortfolio/assets/css/style.css
+++ b/myRealPortfolio/assets/css/style.css
@@ -77,6 +77,15 @@ footer.page-footer {
   top: -5%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-text-stroke: 1px grey;
+  /* text-shadow: 
+  3px 3px 0 #000,
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000; */
+  font-weight: bold;
+
 }
 .pros {
   position: relative;
